tests/compile_fail/dynify_with_unknown_receiver.rs
#[dynify::dynify]
trait Trait {
    async fn test(self: MySelf);
}

fn main() {}
